--- a/index.html
+++ b/index.html
@@ -125,15 +125,12 @@
 
                 <p class="justify">
                   Prior to UofT, I completed my PhD and MS in <a href="https://www.colorado.edu/cmci/infoscience" target="_blank">Information Science</a> from the University of Colorado Boulder, where I worked with <a href="https://www.colorado.edu/faculty/semaan/" target="_blank">Bryan Semaan</a>. Previously, I received a MS in Computer Science from <a href="https://www.missouristate.edu/" target="_blank">Missouri State University</a> and a BSEngg in Computer Science and Engineering from <a href="http://www.buet.ac.bd/" target="_blank">Bangladesh University of Engineering and Technology</a> and worked as a lecturer in the Department of Computer Science and Engineering at <a href="https://www.diu.ac/programs/department-of-cse" target="_blank">Dhaka International University, Bangladesh</a>. 
-                  <!-- As a first-generation scholar and person of color from the Global South, I care about promoting academic and professional development of aspiring scholars, specifically those from marginalized communities.  -->
-                 <!--  I also guide undergraduate students in pursuing research and higher education as a mentor in the <a href="https://bwcse.wordpress.com" target="_blank"/>Bangladeshi Women in Computer Science and Engineering</a> group.  --> 
+                  As a first-generation scholar and person of color from the Global South, I care about promoting academic and professional development of aspiring scholars, specifically those from marginalized communities.
                   Feel free to reach out to me with questions about grad school and HCI research.
                 </p>
 
               	<p class="justify">
-              		Apart from academic activities, I have always been passionate about painting and sketching. 
-                 <!--  Whenever I get time, be it during a journey or before going to bed, I listen to music and sing along.  -->
-                  I also like traveling and roaming around new places. Now and then I try to get a break from my busy schedule and set out for a tour with my friends and family.
+              		Apart from academic activities, I have always been passionate about painting and sketching. I also like traveling and roaming around new places (have visited 23 states in the US so far). In my free time, I also enjoy cooking, rewatch my favorite sitcoms, read fictions, and recite poems.
               	</p>
             </div>
 
