--- a/index.html
+++ b/index.html
@@ -1114,14 +1114,14 @@
           </div>
 
           <div class="container-fluid">
-            <div class="subheading mb-3 text-primary">Traveling</div>
+            <div class="subheading mb-3 text-primary">Sketching</div>
             	<p class="justify">
             		My travel enthusiast soul always wants to <em>go places</em> (in its literal sense). I love to spend my free time planning the itinerary of my umpteenth future trip, and whenever I can carve out a few days off my busy schedule (and the world is not going through a pandemic-induced lockdown), I put on my traveler’s hat and check destinations off my lengthy bucket list. My travels have taken me to mountaintops that reach the clouds, awe-inspiring glaciers, torquoise lakes, thundering waterfalls, and pristine beaches. You can find some photos captured by my partner during our <a href="https://abirsaha.com/photos/" target="_blank">travels</a>.
             	</p>
 
             	<div class="row">
 	              <div class="col-lg-4">
-	                <img class="img-fluid" src="img/solheimajokull.jpg" alt="Maitraye is smiling at the camera while hanging near a crevasse in Solheimajokull glacier, Iceland" >
+	                <img class="img-fluid" src="img/md22.JPG" alt="Durga Puja is one of the biggest festvals in Bengal with cultural grounding in Hinduism and historic ties to the colonial period. The image shows an acrylic painting of Goddess Durga by Dipto in 2022." >
 	              </div>
 	              <div class="col-lg-4">
 	                <img class="img-fluid" src="img/artists bluff.jpg"  alt="Maitraye and her husband is smiling at the camera after hiking the artist's bluff trail in Franconia, New hampshire. Background shows fall foliage." >
