--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,35 @@
 	              	<img class="img-fluid" src="img/vestrahorn.jpg" alt="Maitraye is wearing a red saree and admiring the beauty of the Vestrahorn mountain in Iceland" >
 	              </div>
 	            </div>
+
+              <div class="container-fluid">
+                <div class="subheading mb-3 text-primary">Travelling</div>
+                  <p class="justify">
+                    My travel enthusiast soul always wants to <em>go places</em> (in its literal sense). I love to spend my free time planning the itinerary of my umpteenth future trip, and whenever I can carve out a few days off my busy schedule (and the world is not going through a pandemic-induced lockdown), I put on my traveler’s hat and check destinations off my lengthy bucket list. My travels have taken me to mountaintops that reach the clouds, awe-inspiring glaciers, torquoise lakes, thundering waterfalls, and pristine beaches. You can find some photos captured by my partner during our <a href="https://abirsaha.com/photos/" target="_blank">travels</a>.
+                  </p>
+    
+                  <div class="row">
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/artists bluff.jpg"  alt="Maitraye and her husband is smiling at the camera after hiking the artist's bluff trail in Franconia, New hampshire. Background shows fall foliage." >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/skogafoss.jpg" alt="Maitraye is running towards the Skogafoss waterfall in iceland." >
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/bahamas.jpg" alt="Maitraye is smiling at camera in front of pristine blue ocean in Bahamas" >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/reynisfjara.jpg" alt="Maitraye and her husband sitting on top of a basalt column in Reynisfjara black sand beach in Iceland" >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/vestrahorn.jpg" alt="Maitraye is wearing a red saree and admiring the beauty of the Vestrahorn mountain in Iceland" >
+                    </div>
+                  </div>
 	            <!-- <div class="row">
 	              <div class="col-lg-4">
 	                <img class="img-fluid" src="img/skogafoss.jpg" alt="skogafoss, iceland" >
