--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
 	                <img class="img-fluid" src="img/md22.JPG" alt="Durga Puja is one of the biggest festvals in Bengal with cultural grounding in Hinduism and historic ties to the colonial period. The image shows an acrylic painting of Goddess Durga by Dipto in 2022." >
 	              </div>
 	              <div class="col-lg-4">
-	                <img class="img-fluid" src="img/artists bluff.jpg"  alt="Maitraye and her husband is smiling at the camera after hiking the artist's bluff trail in Franconia, New hampshire. Background shows fall foliage." >
+	                <img class="img-fluid" src="img/sk18.JPG bluff.jpg"  alt="A pencil sketch of baby Krishna by Dipto in 2018." >
 	              </div>
 	              <div class="col-lg-4">
 	                <img class="img-fluid" src="img/skogafoss.jpg" alt="Maitraye is running towards the Skogafoss waterfall in iceland." >
