--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
 	                <img class="img-fluid" src="img/sk18.JPG bluff.jpg"  alt="A pencil sketch of baby Krishna by Dipto in 2018." >
 	              </div>
 	              <div class="col-lg-4">
-	                <img class="img-fluid" src="img/skogafoss.jpg" alt="Maitraye is running towards the Skogafoss waterfall in iceland." >
+	                <img class="img-fluid" src="img/md19.JPG" alt="A mixed pencil-pastel sketch by Dipto in 2019 to protest against the rising gender harassment in Bangladesh." >
 	              </div>
 	            </div>
 	            <div class="row">
