--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                       <img class="img-fluid" src="img/aspen21.jpg"  alt="A snap of the Maroon Bells in Aspen, CO taken by Dipto in 2021." >
                     </div>
                     <div class="col-lg-4">
-                      <img class="img-fluid" src="img/skogafoss.jpg" alt="Maitraye is running towards the Skogafoss waterfall in iceland." >
+                      <img class="img-fluid" src="img/mostate18.jpg" alt="Dipto is reciting a poem in celebration of the Bengali New Year by Missouri State University in 2018." >
                     </div>
                   </div>
                   <div class="row">
