--- a/index.html
+++ b/index.html
@@ -1130,17 +1130,9 @@
 	                <img class="img-fluid" src="img/md19.JPG" alt="A mixed pencil-pastel sketch by Dipto in 2019 to protest against the rising gender harassment in Bangladesh." >
 	              </div>
 	            </div>
-	            <div class="row">
-	              <div class="col-lg-4">
-	                <img class="img-fluid" src="img/bahamas.jpg" alt="Maitraye is smiling at camera in front of pristine blue ocean in Bahamas" >
-	              </div>
-	              <div class="col-lg-4">
-	                <img class="img-fluid" src="img/reynisfjara.jpg" alt="Maitraye and her husband sitting on top of a basalt column in Reynisfjara black sand beach in Iceland" >
-	              </div>
-	              <div class="col-lg-4">
-	              	<img class="img-fluid" src="img/vestrahorn.jpg" alt="Maitraye is wearing a red saree and admiring the beauty of the Vestrahorn mountain in Iceland" >
-	              </div>
-	            </div>
+	            <!-- <div class="row">
+	              
+	            </div> -->
 
               <div class="container-fluid">
                 <div class="subheading mb-3 text-primary">Travelling</div>
@@ -1159,17 +1151,7 @@
                       <img class="img-fluid" src="img/mostate18.jpg" alt="Dipto is reciting a poem in celebration of the Bengali New Year by Missouri State University in 2018." >
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/bahamas.jpg" alt="Maitraye is smiling at camera in front of pristine blue ocean in Bahamas" >
-                    </div>
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/reynisfjara.jpg" alt="Maitraye and her husband sitting on top of a basalt column in Reynisfjara black sand beach in Iceland" >
-                    </div>
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/vestrahorn.jpg" alt="Maitraye is wearing a red saree and admiring the beauty of the Vestrahorn mountain in Iceland" >
-                    </div>
-                  </div>
+                  
 	            <!-- <div class="row">
 	              <div class="col-lg-4">
 	                <img class="img-fluid" src="img/skogafoss.jpg" alt="skogafoss, iceland" >
