--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
           <div class="container-fluid">
             <div class="subheading mb-3 text-primary">Music</div>
             	<p class="justify">
-            		I love music. Singing, for me, has always been a blissful escape, a way to unwind. Coming from a music-loving family, my journey with singing started at an early age. I mostly cover Bangla songs. During my undergrad years, I performed in several events as a member of Murchhona, the central cultural club of BUET. After moving to the USA, I performed in a number of student organized events in Indianapolis and Chicago. You can check out my Youtube and Soundcloud profiles below. 
+            		I love music. Singing, for me, has always been a blissful escape, a way to unwind. Coming from a music-loving family, my journey with singing started at an early age. I mostly cover Bangla songs. You can check out my Soundcloud profile below. 
         		</p>
 
             <ul class="list-inline list-social-icons mb-0">
@@ -1093,14 +1093,14 @@
                   </span>
                 </a>
               </li> -->
-              <!-- <li class="list-inline-item">
-                <a href="https://soundcloud.com/maitraye-das" target="_blank" aria-label="Soundcloud">
+              <li class="list-inline-item">
+                <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i aria-hidden="true" title="Soundcloud" class="fab fa-soundcloud fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
-              </li> -->
+              </li>
             </ul>
 
             <!-- <div class="row">
