--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   More recently, our group has started exploring accessibility of generative AI for blind and low vision people, such as their <a href="files/papers/BLV_GenAI_ASSETS24.pdf" target="_blank">use contexts and mental models of GenAI tools</a> and <a href="files/papers/alt-prompt-CHI24.pdf" target="_blank">alt text for AI-generated images</a>. -->
 
 
-                  My research has appeared at premier venues including ACM CHI, CSCW, and ICTD and been recognized with a Best Paper Honorable Mention and covered by prominent media outlets. I also received several awards of excellence for outstanding research, teaching, and contributions to diversity and inclusion, and research grants from the University of Colorado Boulder.
+                  My research has appeared at premier venues including ACM CHI, CSCW, and ICTD and been recognized with Best Paper Honorable Mentions and covered by prominent media outlets. I also received several awards of excellence for outstanding research, teaching, and contributions to diversity and inclusion, and research grants from the University of Colorado Boulder.
             	  </p> 
               <!-- I was selected as a <a href="https://risingstars21-eecs.mit.edu/das/" target="_blank">Rising Star in EECS</a> in 2021. I enjoy studying and designing accessible technologies to support collaboration, communication, and social interaction between people with and without disabilities. </p> -->
 
@@ -298,6 +298,8 @@
                         Erina Seh-Young Moon, Devansh Saxena, <strong>Dipto Das</strong>, and Shion Guha. 2025. 
                         <a href="files/papers/CHI25_homelessness.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
                         To appear In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '25)</em>.
+                        <br>
+                        <strong>⭐ Best Paper Honorable Mention</strong>
                     </p>
                 </li>
 
@@ -832,6 +834,9 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
+                Best Paper Honorable Mention Award | ACM CHI | 2025
+              </li>
+              <li>
                 Computing Equipment Grant | University of Colorado Boulder (CU Boulder) | 2024 ($2000)
               </li>
               <li>
@@ -1085,14 +1090,6 @@
         		</p>
 
             <ul class="list-inline list-social-icons mb-0">
-              <!-- <li class="list-inline-item">
-                <a href="https://www.youtube.com/channel/UCt6jIJht0srNRFR82D8Jaew" target="_blank" aria-label="Youtube">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i aria-hidden="true" title="Youtube" class="fab fa-youtube fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li> -->
               <li class="list-inline-item">
                 <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
                   <span class="fa-stack fa-lg">
