--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </p>
 
               	<p class="justify">
-              		Apart from academic activities, I have always been passionate about painting and sketching. I also like traveling and roaming around new places (have visited 23 states in the US so far). In my free time, I also enjoy cooking, rewatch my favorite sitcoms, read fictions, and recite poems.
+              		Apart from academic activities, I have always been passionate about painting and sketching. I also like traveling and roaming around new places. In my free time, I also enjoy cooking, rewatch my favorite sitcoms, read fictions, and recite poems.
               	</p>
             </div>
 
@@ -772,7 +772,7 @@
             <strong>University of Colorado, Boulder, CO, USA</strong>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
-                  Assistant Teaching Professor (part-time) | Department of Information Science | Fall 2025 - Spring 2025
+                  Assistant Teaching Professor (part-time) | Department of Information Science | Fall 2024 - Spring 2025
                 </li>
               </ul>
 
@@ -1099,21 +1099,12 @@
                 </a>
               </li>
             </ul>
-
-            <!-- <div class="row">
-              <div class="col-lg-6">
-                <iframe title="Youtube video of a Bangla song covered by Maitraye and Abir" width=100% height="250" style="margin: 20px auto;" src="https://www.youtube.com/embed/Qpb2qFHsHfA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-              <div class="col-lg-6">
-                <iframe title="Youtube video of a Bangla song covered by Maitraye and Abir" width=100% height="250" style="margin: 20px auto;" src="https://www.youtube.com/embed/au-oNTMGuII"s frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </div>
-            </div> -->
           </div>
 
           <div class="container-fluid">
             <div class="subheading mb-3 text-primary">Sketching</div>
             	<p class="justify">
-            		My travel enthusiast soul always wants to <em>go places</em> (in its literal sense). I love to spend my free time planning the itinerary of my umpteenth future trip, and whenever I can carve out a few days off my busy schedule (and the world is not going through a pandemic-induced lockdown), I put on my traveler’s hat and check destinations off my lengthy bucket list. My travels have taken me to mountaintops that reach the clouds, awe-inspiring glaciers, torquoise lakes, thundering waterfalls, and pristine beaches.
+            		Plain and old pencil sketch is my go-to medium, but I do paint with acrylic and water color depending on the subject. Human figures with abstractions connecting those with social and cultural sentiments is what I often consider as the topic of my drawings. A series of five paintings I worked on during grad school was "Durga" depicting different ways divine feminine energy is culturally conceptualized in Bengal.
             	</p>
 
             	<div class="row">
@@ -1132,9 +1123,9 @@
 	            </div> -->
 
               <div class="container-fluid">
-                <div class="subheading mb-3 text-primary">Travelling</div>
+                <div class="subheading mb-3 text-primary">Other Hobbies</div>
                   <p class="justify">
-                    My travel enthusiast soul always wants to <em>go places</em> (in its literal sense). I love to spend my free time planning the itinerary of my umpteenth future trip, and whenever I can carve out a few days off my busy schedule (and the world is not going through a pandemic-induced lockdown), I put on my traveler’s hat and check destinations off my lengthy bucket list. My travels have taken me to mountaintops that reach the clouds, awe-inspiring glaciers, torquoise lakes, thundering waterfalls, and pristine beaches.
+                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
                   </p>
     
                   <div class="row">
@@ -1161,9 +1152,7 @@
 	              </div>
 	            </div> -->
 
-            <!-- <div class="row">
-              <img class="img-fluid .col-xs-12" src="img/travel.jpg" alt="A grid style collage of six images. In the top left image, Maitraye and her six friends are sitting on the rocks beneath a waterfall. All of them are soaked in water and posing like they are doing meditation. The top middle photo captures Maitraye looking at a giant waterfall. In the top right photo Maitraye is sitting on a rock in front of a lake. In the bottom left photo, a smiling Maitraye is sitting on a rock on a water stream. The bottom middle photo captures Maitraye playing with waves smilingly. In the bottom right photo, Maitraye's silhouette is standing on a beach during sunset with her hands stretched outwards." >
-            </div> -->
+            
           </div>
         </div>
       </section>
