--- a/index.html
+++ b/index.html
@@ -1084,24 +1084,6 @@
         <div class="my-auto">
           <h2 class="mb-5">Personal Interests</h2>
           <div class="container-fluid">
-            <div class="subheading mb-3 text-primary">Music</div>
-            	<p class="justify">
-            		I love music. Singing, for me, has always been a blissful escape, a way to unwind. Coming from a music-loving family, my journey with singing started at an early age. I mostly cover Bangla songs. You can check out my Soundcloud profile below. 
-        		</p>
-
-            <ul class="list-inline list-social-icons mb-0">
-              <li class="list-inline-item">
-                <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i aria-hidden="true" title="Soundcloud" class="fab fa-soundcloud fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="container-fluid">
             <div class="subheading mb-3 text-primary">Sketching</div>
             	<p class="justify">
             		Plain and old pencil sketch is my go-to medium, but I do paint with acrylic and water color depending on the subject. Human figures with abstractions connecting those with social and cultural sentiments is what I often consider as the topic of my drawings. A series of five paintings I worked on during grad school was "Durga" depicting different ways divine feminine energy is culturally conceptualized in Bengal.
@@ -1123,7 +1105,7 @@
 	            </div> -->
 
               <div class="container-fluid">
-                <div class="subheading mb-3 text-primary">Other Hobbies</div>
+                <div class="subheading mb-3 text-primary">Miscellaneous</div>
                   <p class="justify">
                     I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
                   </p>
@@ -1138,7 +1120,20 @@
                     <div class="col-lg-4">
                       <img class="img-fluid" src="img/mostate18.jpg" alt="Dipto is reciting a poem in celebration of the Bengali New Year by Missouri State University in 2018." >
                     </div>
+
+                    <ul class="list-inline list-social-icons mb-0">
+                      <li class="list-inline-item">
+                        <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
+                          <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i aria-hidden="true" title="Soundcloud" class="fab fa-soundcloud fa-stack-1x fa-inverse"></i>
+                          </span>
+                        </a>
+                      </li>
+                    </ul>
                   </div>
+
+                  
                   
 	            <!-- <div class="row">
 	              <div class="col-lg-4">
