--- a/index.html
+++ b/index.html
@@ -1107,20 +1107,10 @@
               <div class="container-fluid">
                 <div class="subheading mb-3 text-primary">Miscellaneous</div>
                   <p class="justify">
-                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
+                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. You can check out my Soundcloud profile below. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
                   </p>
     
                   <div class="row">
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
-                    </div>
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/aspen21.jpg"  alt="A snap of the Maroon Bells in Aspen, CO taken by Dipto in 2021." >
-                    </div>
-                    <div class="col-lg-4">
-                      <img class="img-fluid" src="img/mostate18.jpg" alt="Dipto is reciting a poem in celebration of the Bengali New Year by Missouri State University in 2018." >
-                    </div>
-
                     <ul class="list-inline list-social-icons mb-0">
                       <li class="list-inline-item">
                         <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
@@ -1131,6 +1121,15 @@
                         </a>
                       </li>
                     </ul>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/aspen21.jpg"  alt="A snap of the Maroon Bells in Aspen, CO taken by Dipto in 2021." >
+                    </div>
+                    <div class="col-lg-4">
+                      <img class="img-fluid" src="img/mostate18.jpg" alt="Dipto is reciting a poem in celebration of the Bengali New Year by Missouri State University in 2018." >
+                    </div>
                   </div>
 
                   
