--- a/index.html
+++ b/index.html
@@ -1107,11 +1107,11 @@
               <div class="container-fluid">
                 <div class="subheading mb-3 text-primary">Miscellaneous</div>
                   <p class="justify">
-                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. You can check out my Soundcloud profile below. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
+                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. You can check out my <a href="https://soundcloud.com/dipto-das-575115499" target="_blank">Soundcloud profile</a>. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
                   </p>
     
                   <div class="row">
-                    <ul class="list-inline list-social-icons mb-0">
+                    <!-- <ul class="list-inline list-social-icons mb-0">
                       <li class="list-inline-item">
                         <a href="https://soundcloud.com/dipto-das-575115499" target="_blank" aria-label="Soundcloud">
                           <span class="fa-stack fa-lg">
@@ -1120,7 +1120,7 @@
                           </span>
                         </a>
                       </li>
-                    </ul>
+                    </ul> -->
                     <div class="col-lg-4">
                       <img class="img-fluid" src="img/cox16.JPG" alt="Two fishing boats somewhere on the Naf river on the way to the Cox's Bazar." >
                     </div>
