--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
               <div class="container-fluid">
                 <div class="subheading mb-3 text-primary">Miscellaneous</div>
                   <p class="justify">
-                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classic Bengali or American country music. You can check out my <a href="https://soundcloud.com/dipto-das-575115499" target="_blank">Soundcloud profile</a>. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
+                    I love traveling to new places. Be that relaxing on the beach in the St. Martin's Island on a full moon light or hiking on high-altitude tracks in Colorado, I hum my favorite classical Bengali or American country music. You can check out my <a href="https://soundcloud.com/dipto-das-575115499" target="_blank">Soundcloud profile</a>. With an interested group, I also enjoy telling or listening to stories. Of what kind? The time I was stuck in an airport for three days straight, or the time I sneaked out of house in middle school! Maybe, you can taste some of my recipes as we share those stories.
                   </p>
     
                   <div class="row">
