--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <a href="files/papers/CHI25_homelessness.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
                         To appear In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '25)</em>.
                         <br>
-                        <strong>⭐ Best Paper Honorable Mention</strong>
+                        <strong><i class="fa-solid fa-award"></i> Best Paper Honorable Mention</strong>
                     </p>
                 </li>
 
@@ -374,8 +374,8 @@
                         <a href="files/papers/CSCW21_governance.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
                         In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '21)</em>. 
                         <br>
-                        <strong>⭐ Best Paper Honorable Mention</strong> 
-                        <strong>❤️ Contribution to Diversity and Inclusion</strong>
+                        <strong><i class="fa-solid fa-award"></i> Best Paper Honorable Mention</strong> 
+                        <strong><i class="fas fa-globe-americas"></i> Contribution to Diversity and Inclusion</strong>
                     </p>
                 </li>
 
