--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                 Award of Excellence for Outstanding Research | Department of Information Science, CU Boulder | 2024
               </li>
               <li>
-                Special Recognition for Outstanding Reviews | ACM CHI (4 times), ACM CSCW
+                Special Recognition for Outstanding Reviews | ACM CHI (4 times), ACM CSCW, ACM DIS
               </li>
               <li>
                 GPSG Travel Grant | CU Boulder | 2024 ($500)
