--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             	<div class="subheading mb-3 text-primary">Name Pronunciation</div>
 	            	<p>
-              		Dip-toh (Dipto) Daash (Das). Dipto means <em>illuminated</em> in Bangla. Click the audio player below to listen to the pronunciation of my name.
+              		Dip-toh (Dipto: দীপ্ত) Daash (Das: দাস). Dipto means <em>enlightened</em> in Bangla. Click the audio player below to listen to the pronunciation of my name.
               		<br>
               		<audio controls>
       	 						<source src="img/diptodas.mp3" type="audio/mpeg">
@@ -333,7 +333,7 @@
                       Mohammad Rashidujjaman Rifat*, <strong>Dipto Das</strong>*, Arpon Podder, Mahiratul Jannat, Robert Soden, Bryan Semaan, and Syed Ishtiaque Ahmed. 2024. 
                       <a href="files/papers/CSCW24_minority.pdf" target="_blank">The Politics of Fear and the Experience of Bangladeshi Religious Minority Communities Using Social Media Platforms.</a> 
                       In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '24)</em>. 
-                      <em>* Equal contribution, student author is put first.</em>
+                      <em>* Equal contribution.</em>
                   </p>
                 </li>
 
