--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             	<div class="subheading mb-3 text-primary">Name Pronunciation</div>
 	            	<p>
-              		Dip-toh (Dipto) Daash (Das). Dipto means <em>enlightened</em> in Bangla (full name spells as দীপ্ত দাস). Click the audio player below to listen to the pronunciation of my name.
+              		Dip-toh (Dipto) Daash (Das). Dipto means <em>enlightened</em> in Bangla. <br>Full name spells as দীপ্ত দাস <br>Click the audio player below to listen to the pronunciation of my name.
               		<br>
               		<audio controls>
       	 						<source src="img/diptodas.mp3" type="audio/mpeg">
