--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
 
             	<div class="subheading mb-3 text-primary">Name Pronunciation</div>
 	            	<p>
-              		Dip-toh (Dipto) Daash (Das). Dipto means <em>enlightened</em> in Bangla. <br>Full name spells as দীপ্ত দাস <br>Click the audio player below to listen to the pronunciation of my name.
+              		Dip-toh (Dipto) Daash (Das). Dipto means <em>enlightened</em> in Bangla. Click the audio player below to listen to the pronunciation of my name.
               		<br>
               		<audio controls>
       	 						<source src="img/diptodas.mp3" type="audio/mpeg">
       						</audio>
+                  <br>Spelling in Bengali: দীপ্ত দাস
 	              	<br>
 	              	Pronouns: He/him/his
 	              </p> 	
