--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cv">
         <div class="my-auto">
-          <h2 class="mb-5">CV</h2>
+          <h2 class="mb-5">Teaching</h2>
           <div> 
             <p>
               <a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a>
@@ -780,7 +780,7 @@
 
               <br>
 
-            <div class="subheading mb-3">Education
+            <!-- <div class="subheading mb-3">Education
             </div>
             <strong>University of Colorado, Boulder, CO, USA</strong>
             <ul class="mb-0" type="1" style="list-style-type:square">
@@ -804,11 +804,11 @@
               <li> 
                 BSEngg in Computer Science and Engineering | September 2017
               </li>
-            </ul>
+            </ul> -->
 
-            <br>
+            <!-- <br> -->
 
-            <div class="subheading mb-3">Research Experience
+            <!-- <div class="subheading mb-3">Research Experience
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
@@ -828,11 +828,11 @@
               <li>
                 Undergraduate Researcher | Bangladesh University of Engineering and Technology | Advised by <a href="https://rifatshahriyar.github.io/" target="_blank">Rifat Shahriyar</a> and <a href="https://cse.buet.ac.bd/faculty/faculty_detail/anindyaiqbal" target="_blank">Anindya Iqbal</a> | 2016 - 2017
               </li>
-            </ul>
+            </ul> -->
 
-            <br>
+            <!-- <br> -->
 
-            <div class="subheading mb-3">Awards, Honors, & Grants
+            <!-- <div class="subheading mb-3">Awards, Honors, & Grants
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
@@ -928,7 +928,7 @@
               <li>
                 Bangladesh National Merit Scholarship | 2013-2017 (Undergraduate tuition fee waiver with stipend, 14,000 BDT)
               </li>             
-            </ul>
+            </ul> -->
 
             <br>
 
